# serializer version: 1
# name: test_login
  'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOi8vZXZhLWJhY2tvZmZpY2Uub25tb29ubHkuYXBwL2FwaS9wdWJsaWMvdjIvbG9naW4iLCJpYXQiOjE3NjA3OTM0NjEsIm5iZiI6MTc2MDc5MzQ2MSwianRpIjoiYjY5U0J4bVVscU5WcmlKQyIsInN1YiI6ImEwMjI2YjhmLTk4ZmUtNDUyNC1iMzY5LTI3MmI0NjZiODc5NyIsInBydiI6IjIzYmQ1Yzg5NDlmNjAwYWRiMzllNzAxYzQwMDg3MmRiN2E1OTc2ZjciLCJkZXZpY2VzIjpbeyJzZXJpYWxfbnVtYmVyIjoiQUxHMDAxMTI0MTAwMTA3Iiwic3VwcGxpZXIiOiJhbHBoYWVzcyIsImRldmljZWFibGVfdHlwZSI6IkFwcFxcTW9kZWxzXFxCYWxjb255QmF0dGVyeSJ9XSwibmFtZSI6IkludGVncmF0aW9uIE5hbWUiLCJhYmlsaXRpZXMiOlsiYXBpOnB1YmxpYyJdfQ.UumLlVUkGBHnO0ZVtpfENy-edf_d5LV4gOctNan2M5w'
# ---
# name: test_retrieve_data[get_batteries]
  list([
    dict({
      'identifier': 'a125ef17-6bdf-45ad-b106-ce54e95e4634',
      'name': 'Zinvolt Batterij',
      'serial_number': 'ZVG011025120088',
    }),
  ])
# ---
# name: test_retrieve_data[get_battery_status]
  dict({
    'current_power': dict({
      'is_dormant': False,
      'max_power': 800,
      'on_grid': True,
      'online_status': <OnlineStatus.ONLINE: 'ONLINE'>,
      'output_current': 4,
      'photovoltaic_power': 0,
      'power_socket_output': -19,
      'state_of_charge': 100.0,
    }),
    'global_settings': dict({
      'battery_lower_threshold': 10,
      'battery_upper_threshold': 100,
      'max_output': 800,
      'max_output_limit': 800,
      'max_output_unlocked': False,
      'maximum_charge_power': 800,
      'standby_time': 60,
    }),
    'name': 'ZVG011025120088',
    'online_status': <OnlineStatus.ONLINE: 'ONLINE'>,
    'serial_number': 'ZVG011025120088',
    'smart_mode': <SmartMode.CHARGED: 'CHARGED'>,
  })
# ---
# name: test_retrieve_data[get_battery_unit]
  dict({
    'battery_model': 'ZVS4000',
    'points': list([
      dict({
        'normal': True,
        'point': 'COMMUNICATION',
      }),
      dict({
        'normal': True,
        'point': 'VOLTAGE',
      }),
      dict({
        'normal': True,
        'point': 'CURRENT',
      }),
      dict({
        'normal': True,
        'point': 'TEMPERATURE',
      }),
      dict({
        'normal': True,
        'point': 'CHARGE',
      }),
      dict({
        'normal': True,
        'point': 'DISCHARGE',
      }),
      dict({
        'normal': True,
        'point': 'OTHER',
      }),
    ]),
    'power': -6,
    'serial_number': 'ZVS25011000009148',
    'temperature': 0,
    'version': dict({
      'current_version': 'V1.02-V0.00.000',
      'latest_version': None,
    }),
  })
# ---
# name: test_retrieve_data[get_custom_modes]
  list([
    dict({
      'enable': False,
      'mode_id': 'EdxM2EsVNJVc6abhbVnbeby5bcq5EBXh',
      'name': 'Aangepaste modus',
      'serial_number': 'ZVG011025120088',
      'weeks': list([
        1,
        2,
        3,
        4,
      ]),
    }),
  ])
# ---
# name: test_retrieve_data[get_global_settings]
  dict({
    'battery_lower_threshold': 10,
    'battery_upper_threshold': 100,
    'max_output': 800,
    'max_output_limit': 800,
    'max_output_unlocked': False,
    'maximum_charge_power': 800,
    'standby_time': 60,
  })
# ---
# name: test_retrieve_data[get_photovoltaic_data]
  list([
    dict({
      'name': 'PV1',
      'power': 0,
    }),
    dict({
      'name': 'PV2',
      'power': 0,
    }),
  ])
# ---
# name: test_retrieve_data[is_battery_online]
  True
# ---
